# OpenGLES

./: CMakeLists.txt
.cache/clangd/index/: Shader.cpp.41E5C149793F9605.idx  Shader.hpp.4BEE523FEFED4F8D.idx  glad.c.4E06F9AAB16D52E2.idx  glad.h.8A3F71E2E4B74363.idx  glfw3.h.8CE6103FD597C2F1.idx  khrplatform.h.902CF70904C56D1E.idx  main.cpp.2566C092F5AA7DB6.idx  stb_image.h.6FF715FEE80EB749.idx
include/glad/: glad.h
lib/: libglfw.3.dylib
src/: Shader.cpp  Shader.hpp  glad.c  main.cpp  texture_builder.cpp  texture_builder.hpp
src/Shaders/: FragmentShader.fs  VertexShader.vs
